# Blackrock_UCB_MFE_Industry_Project

./: .gitignore  EXPERIMENTS.md  README.md  attribution_2020_2025.txt  attribution_2023_equal.txt  attribution_2023_full.txt  comparison_2023_3way.txt  comparison_2023_llm.txt  comparison_2024_3way.txt  pyproject.toml  requirements.txt  test_agents.py  test_diagnostics.py  test_input_modes.py  test_layered.py
docs/: analyst-layer.md  decisions.md  experiment-plan.md  experiments.md  first-final-results.md  leak-and-disagreement.md  metrics.md  pm-layer.md  scientific-writeup.md
notebooks/: analyst_evaluation.ipynb  disagreement_signal.ipynb  memory_ab_evaluation.ipynb  perturbation_evaluation.ipynb  pm_trade_evaluation.ipynb
reports/: phase1.md
scripts/: _cb_text.py  build_intl_series.py  fetch_boe_statements.py  fetch_boj_statements.py  fetch_ecb_statements.py  fetch_fred.py  fetch_fred_vintage.py  run_board.sh
slides/: README.md  architecture.html  layered_agent_fund_phase1.pptx  make_deck.py
src/: compare_sweep.py  diagnostics.py  instruments.py  main.py  run_analyst.py  run_analyst_ic.py  run_backtest.py  run_diagnostics.py  run_feature_ic.py  run_layered.py  run_pm_hybrid.py  run_pm_ic.py  run_pm_mechanical.py  run_recall_probe.py
tests/: test_analyst_output.py  test_contracts.py  test_disagreement_signal.py  test_equity_local.py  test_fred_vintage.py  test_intl_local.py  test_intl_text.py  test_isolation.py  test_llm_client_cache.py  test_mechanical_pm.py  test_new_pods.py  test_no_lookahead.py  test_nowcast_news.py  test_ops.py  test_personas.py  (+12 more)
(+784 files in other folders)
